src/parse/grammar.gram
createvar     : 'let' ident '=' comparison
              : comparison

comparison    : '!' comparison
              : expr (('=='|'!='|'>'|'<'|'>='|'<=') expr)*

expr          : term (('+'|'-') term)*

term          : factor (('*'|'/'|'%') factor)*

factor        : ('+'|'-') factor
              | power

power         : atom ('**' factor)*

atom          : (number|ident|bool)
              : ident '=' comparison
              | '(' comparison ')'

keyword       : abnormalfloat

ident         : (firstletter|letters)+
letters       : firstletter | '0'
firstletter   : 'a'...'z' | 'A'...'Z' | '_' | '$'

bool          : 'true' | 'false'

number        : int | float
float         : (digit+ '.' digit+) | fraction | floatpoint | abnormalfloat
abnormalfloat : 'inf' | 'NaN'
fraction      : '.' digit+
floatpoint    : digit+ '.'
int           : digit+
digit         : '0'...'9'
